<resources>
    <string name="app_name">CallAndSaveApp</string>
    <string name="title">CALL AND SAVE APPLICATION</string>
    <string name="erase_to_left">⌫</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="hash">#</string>
    <string name="zero">0</string>
    <string name="asterisk">*</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="save">save</string>
    <string name="call">call</string>
</resources>