<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:rowCount="5">

    <Button
        android:id="@+id/one"
        style="@style/button"
        android:text="@string/one" />

    <Button
        android:id="@+id/two"
        style="@style/button"
        android:text="@string/two" />

    <Button
        android:id="@+id/three"
        style="@style/button"
        android:text="@string/three" />

    <Button
        android:id="@+id/four"
        style="@style/button"
        android:text="@string/four" />

    <Button
        android:id="@+id/five"
        style="@style/button"
        android:text="@string/five" />

    <Button
        android:id="@+id/six"
        style="@style/button"
        android:text="@string/six" />

    <Button
        android:id="@+id/seven"
        style="@style/button"
        android:text="@string/seven" />

    <Button
        android:id="@+id/eight"
        style="@style/button"
        android:text="@string/eight" />

    <Button
        android:id="@+id/nine"
        style="@style/button"
        android:text="@string/nine" />

    <Button
        android:id="@+id/asterisk"
        style="@style/button"
        android:text="@string/asterisk" />

    <Button
        android:id="@+id/zero"
        style="@style/button"
        android:text="@string/zero" />

    <Button
        android:id="@+id/hash"
        style="@style/button"
        android:text="@string/hash" />

</GridLayout>